# pyne_teste

./: .tool-versions  pyproject.toml  slides.html  slides.md
chat/: consumers.py
core/: asgi.py  settings.py  urls.py
graph_app/: consumers.py  models.py  urls.py  views.py
graph_app/migrations/: 0001_initial.py
templates/chat/: room.html
templates/graph/: graph.html
templates/graph_app/: graph.html  index.html
