[tool.poetry]
name = "pyne-teste"
version = "0.1.0"
description = ""
authors = ["Ana Dulce <ana.torres@jusbrasil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
channels = {extras = ["daphne"], version = "^4.1.0"}
django = "^4.2"
gunicorn = "^22.0.0"
channels-redis = "^4.2.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
