[tool.poetry]
name = "pyne-teste"
version = "0.1.0"
description = ""
authors = ["Ana Dulce <anadulcepadovan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
channels = {extras = ["daphne"], version = "^4.1.0"}
django = "^4.2"
channels-redis = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
